--- a/Structural/facadeP.ipynb
+++ b/Structural/facadeP.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "facadeP.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNgbcUTLM+NYRg0KLyRTH/P",
+      "authorship_tag": "ABX9TyO4KtTrxIZ9bH9TvvotfaEm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6AozADKRf03q"
+        "id": "6AozADKRf03q",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        },
+        "outputId": "6e90b5d0-4090-46ec-8544-50bc6bf1db51"
       },
       "source": [
         "class Stage1:\n",
@@ -39,6 +44,9 @@
         "\n",
         "  def eject(self):\n",
         "    print('1st stage ejection')\n",
+        "\n",
+        "  def return(self):\n",
+        "    print('1st stage return')\n",
         "\n",
         "class Stage2:\n",
         "  def ignite(self):\n",
@@ -55,7 +63,16 @@
         "    print('capsule landing/deploy')\n"
       ],
       "execution_count": 1,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-547d0c791585>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    def return(self):\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -73,41 +90,25 @@
         "    self.stage1.ignite()\n",
         "    self.stage1.eject()\n",
         "    self.stage2.ignite()\n",
+        "    self.stage1.return()\n",
         "    self.stage2.eject()\n",
         "    self.capsule.ignite()\n",
         "    self.capsule.landing()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TuJTyTyjiNwr",
-        "outputId": "6e6e5be0-acef-4a7b-a894-fe5912b444ff"
+        "id": "TuJTyTyjiNwr"
       },
       "source": [
         "rocket = Rocket()\n",
         "rocket.launch()"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1st stage ignition\n",
-            "1st stage ejection\n",
-            "2nd stage ignition\n",
-            "2nd stage ignition\n",
-            "capsule ignition\n",
-            "capsule landing/deploy\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
