--- a/Structural/facadeP.ipynb
+++ b/Structural/facadeP.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "facadeP.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO4KtTrxIZ9bH9TvvotfaEm",
+      "authorship_tag": "ABX9TyOwA67PEGyx62+KNfqOyn8d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,22 +30,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6AozADKRf03q",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 131
-        },
-        "outputId": "6e90b5d0-4090-46ec-8544-50bc6bf1db51"
+        "id": "6AozADKRf03q"
       },
       "source": [
         "class Stage1:\n",
         "  def ignite(self):\n",
         "    print('1st stage ignition')\n",
         "\n",
+        "  def liftOff(self):\n",
+        "    print('1st stage liftOff')\n",
+        "\n",
         "  def eject(self):\n",
         "    print('1st stage ejection')\n",
         "\n",
-        "  def return(self):\n",
+        "  def comeBack(self):\n",
         "    print('1st stage return')\n",
         "\n",
         "class Stage2:\n",
@@ -62,17 +60,8 @@
         "  def landing(self):\n",
         "    print('capsule landing/deploy')\n"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-547d0c791585>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    def return(self):\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -88,27 +77,47 @@
         "\n",
         "  def launch(self):\n",
         "    self.stage1.ignite()\n",
+        "    self.stage1.liftOff()\n",
         "    self.stage1.eject()\n",
         "    self.stage2.ignite()\n",
-        "    self.stage1.return()\n",
+        "    self.stage1.comeBack()\n",
         "    self.stage2.eject()\n",
         "    self.capsule.ignite()\n",
         "    self.capsule.landing()"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TuJTyTyjiNwr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TuJTyTyjiNwr",
+        "outputId": "02246e65-10bb-4a92-8d82-5393baa8f821"
       },
       "source": [
         "rocket = Rocket()\n",
         "rocket.launch()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1st stage ignition\n",
+            "1st stage liftOff\n",
+            "1st stage ejection\n",
+            "2nd stage ignition\n",
+            "1st stage return\n",
+            "2nd stage ignition\n",
+            "capsule ignition\n",
+            "capsule landing/deploy\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
