--- a/Behavioral/stateP.ipynb
+++ b/Behavioral/stateP.ipynb
@@ -6,7 +6,7 @@
       "name": "stateP.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO40WFG9DWpcA1ySe1Szl7A",
+      "authorship_tag": "ABX9TyMROb0RA7pIhuULFqySHhr+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,70 +31,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "02GEY7DlCWNy"
+        "id": "zdAATne7bNna"
       },
       "source": [
-        "class Cat:\n",
-        "  def setState(self,state):\n",
+        "class TrafficLight:\n",
+        "  def __init__(self):\n",
+        "    self.state = 'green'\n",
+        "\n",
+        "  # prefer enum\n",
+        "  def setState(self,state:str):\n",
         "    self.state = state\n",
-        "\n",
-        "  def awake(self):\n",
-        "    self.state.awake(self)\n",
-        "\n",
-        "  def eat(self,menu:str):\n",
-        "    self.state.eat(self,menu)\n",
-        "\n",
-        "  def play(self,event:str):\n",
-        "    self.state.play(event)\n",
-        "\n",
-        "  "
-      ],
-      "execution_count": 26,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "AVNwJiTCYids"
-      },
-      "source": [
-        "class State:\n",
-        "  def awake(self,cat:Cat):\n",
-        "    pass\n",
-        "  def eat(self,cat:Cat,menu:str):\n",
-        "    pass\n",
-        "  def play(self,event:str):\n",
-        "    pass\n",
-        "\n",
-        "class Sleeping(State):\n",
-        "  def awake(self,cat:Cat):\n",
-        "    cat.setState(Awaken())\n",
-        "    print('I am up')\n",
-        "\n",
-        "  def eat(self,cat:Cat,menu:str):\n",
-        "    print('I am sleeping, I cannot eat')\n",
-        "\n",
-        "  def play(self, event:str):\n",
-        "    print('I am sleeping, I cannot play')\n",
-        "\n",
         "  \n",
+        "  def speak(self):\n",
+        "    if self.state == 'green':\n",
+        "      print('green light')\n",
+        "    elif self.state == 'red':\n",
+        "      print('red light')\n",
         "\n",
-        "class Awaken(State):\n",
-        "  def awake(self,cat:Cat):\n",
-        "    print('I am already up')\n",
-        "\n",
-        "  def eat(self,cat:Cat,menu:str):\n",
-        "    print(f'I am eating {menu}')\n",
-        "    if menu == 'dinner':\n",
-        "      cat.setState(Sleeping())\n",
-        "      print('I am going to sleep, good night')\n",
-        "\n",
-        "  def play(self, event:str):\n",
-        "    print(f'I am playing {event}')\n",
-        "\n",
+        "  def wait(self):\n",
+        "    print('wait.. the light changed')\n",
+        "    if self.state == 'green':\n",
+        "      self.state = 'red'\n",
+        "    elif self.state == 'red':\n",
+        "      self.state = 'green'\n",
         "\n"
       ],
-      "execution_count": 29,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -103,35 +65,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "6wkOpmu_aLZU",
-        "outputId": "09976377-c69d-475c-e3fe-b8dcfcaab530"
+        "id": "hsEu5otyqXUp",
+        "outputId": "f53ee0e3-f3c8-40bf-aef0-456541ee8181"
       },
       "source": [
-        "cat = Cat()\n",
-        "cat.setState(Awaken())\n",
-        "cat.play('tennis')\n",
-        "cat.awake()\n",
-        "cat.eat('lunch')\n",
-        "cat.eat('dinner')\n",
-        "\n",
-        "cat.play('game')\n",
-        "cat.eat('breakfast')\n",
-        "cat.awake()"
+        "t_light = TrafficLight()\n",
+        "t_light.speak()\n",
+        "t_light.wait()\n",
+        "t_light.speak()"
       ],
-      "execution_count": 30,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "I am playing tennis\n",
-            "I am already up\n",
-            "I am eating lunch\n",
-            "I am eating dinner\n",
-            "I am going to sleep, good night\n",
-            "I am sleeping, I cannot play\n",
-            "I am sleeping, I cannot eat\n",
-            "I am up\n"
+            "green light\n",
+            "wait.. the light changed\n",
+            "red light\n"
           ]
         }
       ]
@@ -139,12 +90,96 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zdAATne7bNna"
+        "id": "gaMqxIjOqdGW"
+      },
+      "source": [
+        "class TrafficLight:\n",
+        "  def __init__(self):\n",
+        "    self.state = GreenLight()\n",
+        "\n",
+        "  def setState(self,state):\n",
+        "    self.state = state\n",
+        "  \n",
+        "  def speak(self):\n",
+        "    self.state.status()\n",
+        "\n",
+        "  def wait(self):\n",
+        "    self.state.changeLight(self)\n"
+      ],
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ce77HxeyquDT"
+      },
+      "source": [
+        "class State:\n",
+        "  def status(self):\n",
+        "    pass\n",
+        "  def changeLight(self,traffic_light:TrafficLight):\n",
+        "    pass\n",
+        "\n",
+        "\n",
+        "class GreenLight(State):\n",
+        "  def status(self):\n",
+        "    print('green light')\n",
+        "\n",
+        "  def changeLight(self,traffic_light:TrafficLight):\n",
+        "    print('wait.. the light changed')\n",
+        "    traffic_light.setState(RedLight())\n",
+        "  \n",
+        "\n",
+        "class RedLight(State):\n",
+        "  def status(self):\n",
+        "    print('red light')\n",
+        "\n",
+        "  def changeLight(self,traffic_light:TrafficLight):\n",
+        "    print('wait.. the light changed')\n",
+        "    traffic_light.setState(GreenLight())\n",
+        "  \n"
+      ],
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RXmy_VedsgAU",
+        "outputId": "2120123b-56f7-4edb-cba7-de514cef3951"
+      },
+      "source": [
+        "t_light = TrafficLight()\n",
+        "t_light.speak()\n",
+        "t_light.wait()\n",
+        "t_light.speak()"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "green light\n",
+            "wait.. the light changed\n",
+            "red light\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wa_XXSGeskf_"
       },
       "source": [
         ""
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     }
   ]
