--- a/Behavioral/commandP.ipynb
+++ b/Behavioral/commandP.ipynb
@@ -6,7 +6,7 @@
       "name": "commandP.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOb8Q9VnYc1KzYtqdgACG9F",
+      "authorship_tag": "ABX9TyNOlaDv6f5ugGdv3bj53YfP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,14 +38,14 @@
         "  def execute(self):\n",
         "    pass\n",
         "\n",
-        "class printCommand(Command):\n",
+        "class PrintCommand(Command):\n",
         "  def __init__(self, print_str:str):\n",
         "    self.print_str = print_str\n",
         "  \n",
         "  def execute(self):\n",
         "    print(f\"from print command : {self.print_str}\")"
       ],
-      "execution_count": 26,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -55,16 +55,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UnzovSKtENnZ",
-        "outputId": "d2d4f061-9181-4d85-cae4-83080c8c4035"
+        "outputId": "dcbde088-b669-476c-9605-bc5673774052"
       },
       "source": [
-        "firstCommand = printCommand(\"first command\")\n",
-        "secondCommand = printCommand(\"second command\")\n",
+        "first_command = printCommand(\"first command\")\n",
+        "second_command = printCommand(\"second command\")\n",
         "\n",
-        "firstCommand.execute()\n",
-        "secondCommand.execute()"
+        "first_command.execute()\n",
+        "second_command.execute()"
       ],
-      "execution_count": 27,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
         "    print(\"The dog is staying\")\n",
         "\n",
         "\n",
-        "class DogCommands(Command):\n",
+        "class DogCommand(Command):\n",
         "  #prefer enums\n",
         "  def __init__(self, dog:Dog,commands:List[str]):\n",
         "    self.dog = dog\n",
@@ -103,7 +103,7 @@
         "      elif command == 'stay':\n",
         "        self.dog.stay()"
       ],
-      "execution_count": 20,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -113,14 +113,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lL3S2lOAJvq1",
-        "outputId": "d0bcbbed-7c05-41df-fbf3-398e18c21b58"
+        "outputId": "6041353f-69a9-4952-e237-1877c1452eb4"
       },
       "source": [
         "baduk = Dog()\n",
-        "dogCommands = DogCommands(baduk,['stay','sit','sit'])\n",
-        "dogCommands.execute()"
+        "dog_command = DogCommands(baduk,['stay','sit','sit'])\n",
+        "dog_command.execute()"
       ],
-      "execution_count": 28,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rsP3EJAAA7Dc",
-        "outputId": "e6ea5bb0-0306-42bd-c582-ab7915ca75be"
+        "outputId": "070fda95-bf13-4d9f-afc3-68ae4ab16e87"
       },
       "source": [
         "class Invoker:\n",
@@ -160,7 +160,7 @@
         "invoker.addCommand(secondCommand)\n",
         "invoker.runCommands()"
       ],
-      "execution_count": 30,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
