--- a/Behavioral/observerP.ipynb
+++ b/Behavioral/observerP.ipynb
@@ -6,7 +6,7 @@
       "name": "observerP.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO2Fqc3U+xFILoLGHX0Ndsv",
+      "authorship_tag": "ABX9TyM/CCqbzuL2WbOluUNZ8E05",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,26 +34,6 @@
         "id": "6NOFfp-_1aKD"
       },
       "source": [
-        "class Owner:\n",
-        "  def __init__(self):\n",
-        "    self.animals = []\n",
-        "  def register(self,animal):\n",
-        "    self.animals.append(animal)\n",
-        "  \n",
-        "  def notify(self):\n",
-        "    for animal in self.animals:\n",
-        "      animal.update()\n",
-        "\n"
-      ],
-      "execution_count": 11,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3_CHT63g3CST"
-      },
-      "source": [
         "class Observer:\n",
         "  def update(self):\n",
         "    pass\n",
@@ -66,7 +46,27 @@
         "  def update(self):\n",
         "    print('bark')\n"
       ],
-      "execution_count": 12,
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3_CHT63g3CST"
+      },
+      "source": [
+        "class Owner:\n",
+        "  def __init__(self):\n",
+        "    self.animals = []\n",
+        "  def register(self,animal:Observer):\n",
+        "    self.animals.append(animal)\n",
+        "  \n",
+        "  def notify(self):\n",
+        "    for animal in self.animals:\n",
+        "      animal.update()\n",
+        "\n"
+      ],
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KViQ18XQ3PHM",
-        "outputId": "58e8c334-f85c-4f25-c185-f2697728acab"
+        "outputId": "3c3a14ff-dab5-4d91-9185-29a46803d8d6"
       },
       "source": [
         "owner = Owner()\n",
@@ -88,7 +88,7 @@
         "\n",
         "owner.notify()"
       ],
-      "execution_count": 13,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
