--- a/Structural/decoratorP.ipynb
+++ b/Structural/decoratorP.ipynb
@@ -6,7 +6,7 @@
       "name": "decoratorP.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOJBLByz7SqJJdgP+zlzfTm",
+      "authorship_tag": "ABX9TyMBPZ3iX3Ob9Pg4YMWbCwZT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,11 +38,11 @@
         "  def speak(self):\n",
         "    pass\n",
         "\n",
-        "class Cat:\n",
+        "class Cat(Animal):\n",
         "  def speak(self):\n",
         "    print(\"meow\", end='')\n",
         "\n",
-        "class Dog:\n",
+        "class Dog(Animal):\n",
         "  def speak(self):\n",
         "    print(\"bark\", end='')\n",
         "\n",
@@ -50,7 +50,7 @@
         "  animal.speak()\n",
         "  print(\" \")"
       ],
-      "execution_count": 15,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
         "    self.animal.speak()\n",
         "    print(\"😍\",end='')\n"
       ],
-      "execution_count": 16,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7913cf67-805e-46dd-bc89-ec12faaa050e"
+        "outputId": "702418c2-efdb-496a-d98f-7c31535fa870"
       },
       "source": [
         "kitty = Cat()\n",
@@ -95,7 +95,7 @@
         "kitty_smile_heart = WthHeartEyes(kitty_smile)\n",
         "makeSpeak(kitty_smile_heart)"
       ],
-      "execution_count": 17,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XX48jBPehgas",
-        "outputId": "ed79daf5-46fb-477f-b77b-8e7f49308d96"
+        "outputId": "c2a44be9-f21d-473c-f7b3-cc895a60e208"
       },
       "source": [
         "dog = Dog()\n",
@@ -125,7 +125,7 @@
         "dog_heart_smile = WthSmile(dog_heart)\n",
         "makeSpeak(dog_heart_smile)"
       ],
-      "execution_count": 21,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
