--- a/Behavioral/mediatorP.ipynb
+++ b/Behavioral/mediatorP.ipynb
@@ -6,7 +6,7 @@
       "name": "mediatorP.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNNnymsJ3LLqLBhlsbOKqAa",
+      "authorship_tag": "ABX9TyOCDjiHJdc0bwyXH/qvC9Rd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "  def notify(sender):\n",
         "    pass    "
       ],
-      "execution_count": 20,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -60,8 +60,8 @@
         "  def On(self):\n",
         "    print(\"light On\")    \n",
         "  def Off(self):\n",
-        "    print(\"Light off\")\n",
-        "    self.mediator.notify('lightOff')\n",
+        "    print(\"light off\")\n",
+        "    self.mediator.notify('LightOff')\n",
         "\n",
         "class Speaker:\n",
         "  def setMediator(self,mediator:Mediator):\n",
@@ -72,7 +72,7 @@
         "    print(\"speaker off\")\n",
         "\n"
       ],
-      "execution_count": 26,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -92,11 +92,11 @@
         "      self.speaker.On()\n",
         "      self.light.On()\n",
         "\n",
-        "    elif signal == 'lightOff':\n",
+        "    elif signal == 'LightOff':\n",
         "      self.speaker.Off()\n",
         "  "
       ],
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
         "light.setMediator(mediator)\n",
         "speaker.setMediator(mediator)\n"
       ],
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -125,12 +125,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "34eb1a26-c812-4558-b763-fa88ab6eac43"
+        "outputId": "dfea5ebf-f520-4196-f7d4-e75100c2fafb"
       },
       "source": [
         "clock.Alarm()"
       ],
-      "execution_count": 24,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,19 +150,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qXwA5slA5-Iw",
-        "outputId": "ccebc5e5-8f52-46b1-9b3e-1ab761c211be"
+        "outputId": "2f2bdfbb-a4c8-4bdb-ef26-a4991d1e0de8"
       },
       "source": [
         "light.Off()"
       ],
-      "execution_count": 25,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Light Off\n",
-            "speaker Off\n"
+            "light off\n",
+            "speaker off\n"
           ]
         }
       ]
@@ -175,7 +175,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     }
   ]
